--- a/package.json
+++ b/package.json
@@ -670,9 +670,8 @@
     "@bigtest/mocha": "^0.5.2",
     "@bigtest/react": "^0.1.2",
     "@folio/eslint-config-stripes": "^3.2.1",
-    "@folio/stripes": "^2.10.1",
-    "@folio/stripes-cli": "^1.11.0",
-    "@folio/stripes-core": "^3.0.1",
+    "@folio/stripes": "~2.8.0",
+    "@folio/stripes-components": "~5.5.0",
     "babel-eslint": "^9.0.0",
     "babel-polyfill": "^6.26.0",
     "chai": "^4.2.0",
@@ -700,7 +699,7 @@
     "uuid": "^3.0.1"
   },
   "peerDependencies": {
-    "@folio/stripes": "^2.10.1",
+    "@folio/stripes": "~2.8.0",
     "react": "*",
     "react-router": "*",
     "react-router-dom": "*"
